changes for Retail Application

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/ReactProjects2020/retail-properties",
+  "homepage": "https://ReactProjects2020.github.io/retail-properties",
   "name": "retail-properties",
   "version": "0.1.0",
   "private": true,
